# BaMoS

./: BaMoSLong_NoSmoothRigOnlyGIFDGM_Path.sh  BaMoS_LongCorr_ScratchMean_unbiased.sh  BaMoS_MSProject_Ferran.sh  BaMoS_WMH_010618.sh  BaMoS_WMH_270119_Scratch.sh  BaMoS_WMH_FLAIRSpace.sh  CMakeLists.txt  GenericRule_CSF.txt  GenericRule_SC.txt  GenericRule_SC_CSF.txt  GenericRule_SC_CSF_3classes.txt  LaplaceLobesScripts.sh
correction_scripts/: Parsing_LesionFile.py  Parsing_LesionFile_args.py  correction_lesions.py  count_lesions.py  print_be.py  semiauto_correction.py
longitudinal_processing/: BaMoSLong_AllYTP.sh  BaMoSLong_CompleteCL.sh  GMatrix4_Low3.txt  GroupwiseReg_BaMoSLong_UB3_orderFit1.sh
nifti/: nifti1.h  nifti1_io.h
seg-apps/: CMakeLists.txt  Seg_Analysis.cpp  Seg_BiASM.cpp
seg-lib/: CMakeLists.txt  _DirichletPriors.cpp  _DirichletPriors.h  _EigenvaluesCov.h  _SVDCov.h  _Seg_Analysis.cpp  _Seg_Analysis.h  _Seg_InitAndRun.cpp  _Seg_InitAndRun.h  _TreeEM.cpp  _TreeEM.h  _TreeEM_new-2.cpp  _TreeEM_new-2.h  _TreeEM_new.cpp  _TreeEM_new.h  _seg_Topo.cpp  _seg_common.h  _seg_lesion.cpp  _seg_tools.cpp  _seg_tools.h
support_scripts/: lobar_layer_separation.py
